--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,14 @@
 {
-  "name": "HelloIonic",
+  "name": "rehApp",
+  "description": "Aplikacja mobilna na potrzeby pracy inżynierskiej. Temat: 'Projekt i implementacja systemu wspomagającego zarządzanie prywatnym gabinetem rehabilitacyjnym z aplikacją mobilną.'",
+  "version": "1.0.0",
+  "homepage": "https://github.com/pamigomp/rehAppIonic",
+  "license": "MIT",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.0"
+  },
+  "dependencies": {
+    "ngCordova": "~0.1.20-alpha"
   }
 }
