--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "rehapp",
+  "name": "rehApp",
+  "private": true,
   "version": "1.0.0",
-  "description": "rehApp: An Ionic project",
+  "description": "Aplikacja mobilna na potrzeby pracy inżynierskiej. Temat: 'Projekt i implementacja systemu wspomagającego zarządzanie prywatnym gabinetem rehabilitacyjnym z aplikacją mobilną.'",
+  "repository": "https://github.com/pamigomp/rehAppIonic",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
