--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.1.0"
+    "ionic": "driftyco/ionic-bower#1.1.0",
+    "angular-mocks": "=1.4.3"
   },
   "dependencies": {
     "ngCordova": "~0.1.20-alpha"
