--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "Aplikacja mobilna na potrzeby pracy inżynierskiej. Temat: 'Projekt i implementacja systemu wspomagającego zarządzanie prywatnym gabinetem rehabilitacyjnym z aplikacją mobilną.'",
   "repository": "https://github.com/pamigomp/rehAppIonic",
+  "license": "MIT",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
